--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ celery==4.3.0
 certifi==2019.3.9
 chardet==3.0.4
 Django==1.11.20
+fdb==2.0.0
+future==0.17.1
 idna==2.8
 kombu==4.5.0
 psycopg2-binary==2.8.1
