for docker-compose

--- a/conf/deploy_dev.conf
+++ b/conf/deploy_dev.conf
@@ -1,7 +1,7 @@
 debug True
 
-smart_screen_user rapospectre
+smart_screen_user postgres 
 smart_screen_password 123456qq
-smart_screen_host 127.0.0.1
+smart_screen_host db 
 smart_screen_port 5432
-smart_screen_name ss_06
+smart_screen_name ss_produce
